# latent-factors

./: .env.example  .gitignore  BUGFIX_WALKFORWARD_ANALYSIS.md  CHAT_SESSION_SUMMARY.md  CLAUDE.md  GEMINI.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PORTFOLIO_OPTIMIZATION_REVIEW.md  README.md  STREAMLIT_DASHBOARD_GUIDE.md  analyze_factors.py  analyze_factors_detailed.py  pyproject.toml  pytest.ini
.github/workflows/: nightly-factor-qa.yml
.streamlit/: config.toml
docs/plans/: 2026-02-04-decision-synthesizer-design.md  2026-02-04-decision-synthesizer-implementation.md
examples/: FACTOR_WEIGHTING_GUIDE.md  USAGE_GUIDE.md  optimal_factor_weighting_demo.py  sharpe_optimization_demo.py
scripts/: analyze_factors.py  analyze_factors_detailed.py  backtest.py  bootstrap_dashboard_returns.py  check_cache.py  check_factor_storage.py  debug_exposures.py  factor_performance.py  factor_performance_analysis.py  factor_qa.py  factor_trends.py  fixed_momentum_backtest.py  launch_alpha_command_center.sh  launch_dashboard.sh  prepare_dashboard_returns.py  quick_factor_performance.py  show_factor_stocks.py  test_momentum_backtest.py  test_momentum_debug.py
src/: __init__.py  __main__.py  alphavantage_system.py  cli.py  config.py  covariance.py  cross_sectional.py  dashboard.py  dashboard_alpha_command_center.py  dashboard_legacy.py  dashboard_terminal_legacy.py  database.py  decision_synthesizer.py  discover_and_label.py  factor_labeler.py  factor_naming.py  factor_optimization.py  factor_performance_table.py  factor_research.ipynb  factor_weighting.py  latent_factors.py  regime_detection.py  reporting.py  research.py  runner.py  signal_aggregator.py  signal_backtest.py  signals_cli.py  trading_signals.py
src/ui/: __init__.py  app.py  context.py  data.py  plotly_theme.py  state.py  view_models.py
src/ui/components/: cards.py  charts.py  empty_states.py  forms.py  tables.py
src/ui/pages/: __init__.py  factors.py  home.py  portfolio_risk.py  research.py  settings.py  signals.py
tests/: conftest.py  test_asof_boundaries.py  test_briefing_integration.py  test_covariance.py  test_cross_sectional.py  test_decision_synthesizer.py  test_discover_and_label_cli.py  test_factor_naming.py  test_latent_factors_residualization.py  test_phase2_enhancements.py  test_pit_universe.py  test_regime_detection.py  test_signal_backtest_engine.py  test_trading_signals.py  test_ui_view_models.py
