[project]
name = "equity-factors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "lxml>=6.0.0",
    "matplotlib>=3.10.3",
    "openai>=1.0.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.0.0",
    "ratelimit>=2.2.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "yfinance>=0.2.63",
]
